src/ingress-template.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/temp-tls-config"
  #labels:
  #  garden.sapcloud.io/purpose: managed-cert
  name: temp-collector
  namespace: default
spec:
  rules:
  - host: collector-url
    http:
      paths:
      - backend:
          serviceName: temp-jaeger-collector
          servicePort: 14250
  tls:
  - hosts:
    - collector-url
    secretName: temp-tls-config
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    garden.sapcloud.io/purpose: managed-cert
  name: temp-query
  namespace: default
  annotations:
    #nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: temp-tls-config
    nginx.ingress.kubernetes.io/auth-realm: 'Login to your Jaeger'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: query-url
    http:
      paths:
      - path: /collector(/|$)(.*)
        backend:
          serviceName: temp-jaeger-collector
          servicePort: 14268
      - path: /()(.*)
        backend:
          serviceName: temp-jaeger-query
          servicePort: 80
  tls:
  - hosts:
    - query-url
    secretName: temp-tls-query
